--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         .viber-bg { background-color: #7360f2; }
         .telegram-bg { background-color: #229ED9; }
 
-        /* Blog Style Content Formatting */
+        /* Blog Style formatting for description and notes */
         .post-content { white-space: pre-wrap; line-height: 1.8; word-break: break-word; }
 
-        /* Full Image Gallery Layout */
+        /* Full-image Gallery View */
         .gallery-scroll { display: flex; overflow-x: auto; gap: 12px; padding: 5px; scroll-snap-type: x mandatory; }
         .gallery-item { flex: 0 0 100%; scroll-snap-align: center; height: 320px; background: #000; border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
         .gallery-item img { width: 100%; height: 100%; object-fit: contain; }
@@ -83,7 +83,7 @@
             <div class="bg-white p-5 rounded-2xl shadow-md border-l-4 border-[#D4AF37] mb-2 relative overflow-hidden">
                 <h3 class="font-bold text-[#4B0082] text-md mb-1">လုပ်ငန်းရှင်များအတွက်</h3>
                 <p class="text-xs text-gray-600 mb-3">မိမိတို့ လုပ်ငန်းကို Cherry Directory တွင် ထည့်သွင်းလိုပါက Form ဖြည့်စွက်ပေးပါ။</p>
-                <a id="regBtn" target="_blank" class="inline-block gold-gradient text-white text-xs font-bold px-4 py-2 rounded-lg shadow cursor-pointer active:scale-95">စာရင်းသွင်းရန်</a>
+                <a id="regBtn" target="_blank" class="inline-block gold-gradient text-white text-xs font-bold px-4 py-2 rounded-lg shadow cursor-pointer">စာရင်းသွင်းရန်</a>
             </div>
             <div id="adminProfileArea"></div>
             <div id="adminNotesArea" class="space-y-3"></div>
@@ -91,7 +91,7 @@
 
         <section id="detailPage" class="fixed inset-0 bg-[#f8f5ff] z-[100] overflow-y-auto hidden">
             <div class="sticky top-0 bg-white/95 backdrop-blur-md p-3 shadow-sm z-50 flex items-center border-b border-gray-200">
-                <button onclick="closeDetail()" class="w-9 h-9 rounded-full bg-gray-100 text-[#4B0082] flex items-center justify-center hover:bg-[#D4AF37] hover:text-white"><i class="fa fa-arrow-left"></i></button>
+                <button onclick="closeDetail()" class="w-9 h-9 rounded-full bg-gray-100 text-[#4B0082] flex items-center justify-center hover:bg-[#D4AF37] hover:text-white transition-colors"><i class="fa fa-arrow-left"></i></button>
                 <span class="ml-3 font-bold text-[#4B0082] truncate text-sm" id="detailHeader">Details</span>
             </div>
             <div id="detailContent" class="p-5 max-w-2xl mx-auto pb-24"></div>
@@ -118,9 +118,9 @@
         let eventsData = [], dirData = [];
         let activeDirCat = 'All', activeEventCat = 'All';
 
-        // --- IMPROVED GOOGLE DRIVE LINK CONVERTER ---
+        // Helper: Converts Drive link to Direct image URL
         function fixDriveLink(url) {
-            if (!url || typeof url !== 'string' || url.trim() === "" || url === "-") return 'CDST_Logo.png';
+            if (!url || url === "" || url === "-") return 'CDST_Logo.png';
             const driveMatch = url.match(/(?:id=|\/d\/|folders\/)([a-zA-Z0-9_-]{25,})/);
             if (driveMatch && driveMatch[1]) {
                 return "https://lh3.googleusercontent.com/d/" + driveMatch[1];
@@ -148,11 +148,10 @@
         }
 
         async function loadAllData() {
-            // Restore Offline Cache
+            // Restore from Cache
             const cEvents = localStorage.getItem('cache_events');
             const cDir = localStorage.getItem('cache_dir');
             const cAdmin = localStorage.getItem('cache_admin');
-
             if(cEvents) { eventsData = JSON.parse(cEvents); setupFilters('eventFilters', eventsData, (c) => { activeEventCat = c; renderEvents(); }); renderEvents(); }
             if(cDir) { dirData = JSON.parse(cDir); setupFilters('dirFilters', dirData, (c) => { activeDirCat = c; handleSearch(); }); renderDirectory(); }
             if(cAdmin) { renderAdminArea(JSON.parse(cAdmin)); }
@@ -168,12 +167,16 @@
                 const res = await fetch(`${BASE_URL}&gid=${GID_HOME}`);
                 const text = await res.text();
                 const json = JSON.parse(text.substr(47).slice(0, -2));
-                eventsData = json.table.rows.map(r => ({ cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, fromDate: r.c[3]?.v, toDate: r.c[4]?.v, time: r.c[5]?.v, place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, images: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean) }))
-                .filter(i => i.title && i.title !== "Title").reverse(); 
+                eventsData = json.table.rows.map(r => ({ 
+                    cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, 
+                    fromDate: r.c[3]?.v, toDate: r.c[4]?.v, time: r.c[5]?.v, 
+                    place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, 
+                    images: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean) 
+                })).filter(i => i.title && i.title !== "Title").reverse(); 
                 localStorage.setItem('cache_events', JSON.stringify(eventsData));
                 setupFilters('eventFilters', eventsData, (c) => { activeEventCat = c; renderEvents(); });
                 renderEvents();
-            } catch (e) {}
+            } catch (e) { console.error("Event error", e); }
         }
 
         async function fetchDirectory() {
@@ -186,7 +189,7 @@
                 localStorage.setItem('cache_dir', JSON.stringify(dirData));
                 setupFilters('dirFilters', dirData, (c) => { activeDirCat = c; handleSearch(); });
                 renderDirectory();
-            } catch (e) {}
+            } catch (e) { console.error("Dir error", e); }
         }
 
         async function fetchAdmin() {
@@ -196,7 +199,7 @@
                 const json = JSON.parse(text.substr(47).slice(0, -2));
                 localStorage.setItem('cache_admin', JSON.stringify(json.table.rows));
                 renderAdminArea(json.table.rows);
-            } catch (e) {}
+            } catch (e) { console.error("Admin error", e); }
         }
 
         function renderAdminArea(rows) {
@@ -226,7 +229,7 @@
         function renderAdminBtn(lbl, val, pref, icon, cls, isFab=false, isTg=false) {
             if(!val || val === "-" || val === "") return '';
             let lnk = pref + (isTg ? val.toString().replace('@','') : val);
-            return `<a href="${lnk}" class="flex items-center justify-between ${cls} text-white p-3 rounded-xl shadow-md transition active:scale-95"><span class="font-bold text-xs">${lbl}: ${val}</span><i class="${isFab?'fab':'fa'} ${icon}"></i></a>`;
+            return `<a href="${lnk}" class="flex items-center justify-between ${cls} text-white p-3 rounded-xl shadow-md active:scale-95 transition"><span class="font-bold text-xs">${lbl}: ${val}</span><i class="${isFab?'fab':'fa'} ${icon}"></i></a>`;
         }
 
         function setupFilters(cid, data, cb) {
@@ -250,7 +253,7 @@
             list.innerHTML = Object.keys(groups).map(cat => `
                 <div class="mb-4"><h3 class="font-bold text-[#D4AF37] text-[10px] uppercase tracking-widest mb-2 border-l-4 border-[#D4AF37] pl-2">${cat}</h3>
                 <div class="space-y-3">${groups[cat].map(i => `
-                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.images[0] || i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p><span class="text-[9px] text-[#D4AF37] font-bold mt-2 uppercase">View Details <i class="fa fa-arrow-right ml-1"></i></span></div></div>`).join('')}</div></div>`).join('');
+                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${fixDriveLink(i.logo)}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p><span class="text-[9px] text-[#D4AF37] font-bold mt-2 uppercase">View Details <i class="fa fa-arrow-right"></i></span></div></div>`).join('')}</div></div>`).join('');
         }
 
         function renderDirectory() {
@@ -275,8 +278,28 @@
 
             if(type === 'event') {
                 const i = eventsData[index]; document.getElementById('detailHeader').innerText = "Post Details";
-                const imgs = i.images.length > 0 ? i.images : [i.logo].filter(Boolean);
-                content.innerHTML = `<div class="space-y-4 slide-up"><div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37]"><h2 class="text-lg font-bold text-[#4B0082] leading-tight mb-2">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase inline-block">${i.cat}</span></div>${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe for all images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}<div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-info-circle mr-2 text-[#D4AF37]"></i> Information</h3>${renderR('Description', i.desc)}${renderR('From', i.fromDate)}${renderR('To', i.toDate)}${renderR('Time', i.time)}${renderR('Place', i.place)}</div></div>`;
+                const imgs = i.images.length > 0 ? i.images : [];
+                content.innerHTML = `
+                    <div class="space-y-4 slide-up">
+                        <div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4">
+                            <img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover border border-gray-100 shadow-sm" onerror="this.src='CDST_Logo.png'">
+                            <div class="flex-1">
+                                <h2 class="text-lg font-bold text-[#4B0082] leading-tight">${i.title}</h2>
+                                <span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase mt-1 inline-block">${i.cat}</span>
+                            </div>
+                        </div>
+
+                        ${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div><p class="text-[9px] text-center text-gray-400 mt-2 italic"><i class="fa fa-arrow-left mr-1"></i> Swipe for more images <i class="fa fa-arrow-right ml-1"></i></p></div>` : ''}
+
+                        <div class="bg-white p-5 rounded-2xl shadow-sm">
+                            <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-info-circle mr-2 text-[#D4AF37]"></i> Information</h3>
+                            ${renderR('Description', i.desc)}
+                            ${renderR('Organized by', i.org)}
+                            ${renderR('Location', i.place)}
+                            ${renderR('Date', (i.fromDate + ' to ' + i.toDate))}
+                            ${renderR('Time', i.time)}
+                        </div>
+                    </div>`;
             } else {
                 const i = dirData[index]; document.getElementById('detailHeader').innerText = i.name;
                 content.innerHTML = `
@@ -289,11 +312,16 @@
                         </div>
                         <div class="bg-white p-5 rounded-2xl shadow-sm">
                             <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-id-card mr-2 text-[#D4AF37]"></i> Basic Info</h3>
-                            ${renderR('Description', i.desc)}${renderR('Category', i.cat)}${renderR('Type', i.type)}${renderR('Address', i.addr)}${renderR('Ward', i.ward)}
+                            ${renderR('Description', i.desc)}
+                            ${renderR('Category', i.cat)}
+                            ${renderR('Type', i.type)}
+                            ${renderR('Address', i.addr)}
+                            ${renderR('Ward', i.ward)}
                         </div>
                         <div class="bg-white p-5 rounded-2xl shadow-sm">
                             <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-phone-volume mr-2 text-[#D4AF37]"></i> Contact</h3>
-                            ${renderP('Phone 1', i.ph1)}${renderP('Phone 2', i.ph2)}
+                            ${renderP('Phone 1', i.ph1)}
+                            ${renderP('Phone 2', i.ph2)}
                         </div>
                         <div class="bg-white p-5 rounded-2xl shadow-sm">
                             <h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest"><i class="fa fa-share-nodes mr-2 text-[#D4AF37]"></i> Digital Contact</h3>
