--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
     </nav>
 
     <script>
-        // SERVICE WORKER REGISTRATION
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/sw.js').then(reg => console.log('SW Registered')).catch(err => console.log('SW Failed'));
@@ -112,10 +111,14 @@
         let eventsData = [], dirData = [];
         let activeDirCat = 'All', activeEventCat = 'All';
 
+        // --- ANDROID COMPATIBLE DRIVE LINK FIX ---
         function fixDriveLink(url) {
             if (!url || url === "" || url === "-") return 'CDST_Logo.png';
             const driveMatch = url.match(/(?:id=|\/d\/|folders\/)([a-zA-Z0-9_-]{25,})/);
-            if (driveMatch && driveMatch[1]) return "https://lh3.googleusercontent.com/d/" + driveMatch[1];
+            if (driveMatch && driveMatch[1]) {
+                // Using HTTPS and standard lh3 subdomain for Android Chrome compatibility
+                return `https://lh3.googleusercontent.com/d/${driveMatch[1]}`;
+            }
             return url;
         }
 
@@ -191,7 +194,7 @@
                 <div class="bg-white p-6 rounded-2xl shadow-sm border-t-4 border-[#4B0082] mb-6">
                     <div class="mb-4 text-center border-b pb-4"><i class="fa fa-user-shield text-3xl text-[#4B0082] mb-2"></i><h3 class="font-bold text-lg text-[#4B0082]">Admin Profile</h3></div>
                     <div class="space-y-4">
-                        <div class="flex justify-between items-start border-b border-gray-50 pb-2"><span class="text-[10px] text-gray-400 font-bold">DESCRIPTION</span><span class="text-xs font-bold text-[#4B0082] text-right ml-4">${profile.c[0]?.v || '-'}</span></div>
+                        <div class="flex justify-between items-start border-b border-gray-50 pb-2"><span class="text-[10px] text-gray-400 font-bold uppercase">Description</span><span class="text-xs font-bold text-[#4B0082] text-right ml-4">${profile.c[0]?.v || '-'}</span></div>
                         ${renderAdminBtn('Phone 1', profile.c[1]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
                         ${renderAdminBtn('Phone 2', profile.c[2]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
                         ${renderAdminBtn('Viber Chat', profile.c[3]?.v, 'viber://chat?number=', 'fa-viber', 'viber-bg', true)}
@@ -254,9 +257,9 @@
 
         function openDetail(type, index) {
             const modal = document.getElementById('detailPage'); const content = document.getElementById('detailContent');
-            const rR = (l, v) => `<div class="border-b border-gray-50 py-3"><p class="text-[10px] text-gray-400 mb-0.5 uppercase font-bold tracking-wider">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
-            const rP = (l, v) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5 uppercase font-bold">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm active:scale-90"><i class="fa fa-phone mr-1"></i> CALL</a></div>` : '';
-            const rC = (l, v, i, c, lp) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400 uppercase font-bold">${l}</p><p class="text-xs font-bold text-gray-700">${v}</p></div></div><a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm active:scale-90">CHAT</a></div>` : '';
+            const renderR = (l, v) => `<div class="border-b border-gray-50 py-3"><p class="text-[10px] text-gray-400 mb-0.5 uppercase font-bold tracking-wider">${l}</p><div class="text-gray-800 font-medium text-sm post-content">${v || '-'}</div></div>`;
+            const renderP = (l, v) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div><p class="text-[10px] text-gray-400 mb-0.5 uppercase font-bold">${l}</p><p class="text-[#4B0082] font-bold text-sm font-mono">${v}</p></div><a href="tel:${v}" class="bg-green-500 text-white px-3 py-1.5 rounded-lg text-[10px] font-bold shadow-sm active:scale-90"><i class="fa fa-phone mr-1"></i> CALL</a></div>` : '';
+            const renderC = (l, v, i, c, lp) => v ? `<div class="border-b border-gray-50 py-3 flex justify-between items-center"><div class="flex items-center gap-3"><div class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-gray-400"><i class="${i}"></i></div><div><p class="text-[10px] text-gray-400 uppercase font-bold">${l}</p><p class="text-xs font-bold text-gray-700">${v}</p></div></div><a href="${lp}${v.toString().replace('@','')}" target="_blank" class="${c} text-white px-3 py-1 rounded-lg text-[10px] font-bold shadow-sm active:scale-90">CHAT</a></div>` : '';
 
             if(type === 'event') {
                 const i = eventsData[index]; document.getElementById('detailHeader').innerText = "Post Details";
@@ -264,18 +267,18 @@
                 content.innerHTML = `<div class="space-y-4 slide-up">
                     <div class="bg-white p-5 rounded-2xl shadow-sm border-b-4 border-[#D4AF37] flex items-center gap-4">
                         <img src="${fixDriveLink(i.logo)}" class="w-16 h-16 rounded-xl object-cover border" onerror="this.src='CDST_Logo.png'">
-                        <div class="flex-1"><h2 class="text-lg font-bold text-[#4B0082]">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase mt-1 inline-block">${i.cat}</span></div>
+                        <div class="flex-1"><h2 class="text-lg font-bold text-[#4B0082] leading-tight">${i.title}</h2><span class="text-[9px] bg-[#D4AF37] text-white px-2 py-0.5 rounded-full uppercase mt-1 inline-block">${i.cat}</span></div>
                     </div>
                     ${imgs.length > 0 ? `<div class="bg-white p-2 rounded-2xl shadow-sm"><div class="gallery-scroll">${imgs.map(img => `<div class="gallery-item"><img src="${fixDriveLink(img)}" onclick="window.open(this.src)"></div>`).join('')}</div></div>` : ''}
                     <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Information</h3>
-                    ${rR('Description', i.desc)}${rR('Organized by', i.org)}${rR('Location', i.place)}${rR('Date', (i.fromDate + ' to ' + i.toDate))}${rR('Time', i.time)}</div></div>`;
+                    ${renderR('Description', i.desc)}${renderR('Organized by', i.org)}${renderR('Location', i.place)}${renderR('Date', (i.fromDate + ' to ' + i.toDate))}${renderR('Time', i.time)}</div></div>`;
             } else {
                 const i = dirData[index]; document.getElementById('detailHeader').innerText = i.name;
                 content.innerHTML = `<div class="space-y-4 slide-up">
                     <div class="bg-white rounded-3xl p-5 shadow-lg border-b-4 border-[#D4AF37] text-center"><img src="${fixDriveLink(i.img)}" class="w-28 h-28 rounded-xl object-cover mx-auto mb-3 border-2 shadow-sm bg-white" onerror="this.src='CDST_Logo.png'"><h2 class="text-xl font-bold text-[#4B0082]">${i.name}</h2><div class="flex justify-center mt-1">${getStars(i.rating)}</div><a href="${REVIEW_URL}" target="_blank" class="inline-block mt-3 text-[10px] bg-gray-100 text-gray-500 px-4 py-1.5 rounded-full">Write Review</a></div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Basic Info</h3>${rR('Description', i.desc)}${rR('Category', i.cat)}${rR('Type', i.type)}${rR('Address', i.addr)}${rR('Ward', i.ward)}</div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Contact</h3>${rP('Phone 1', i.ph1)}${rP('Phone 2', i.ph2)}</div>
-                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Digital Contact</h3>${rC('Viber', i.viber, 'fab fa-viber', 'viber-bg', 'viber://chat?number=')}${rC('Telegram', i.telegram, 'fab fa-telegram', 'telegram-bg', 'https://t.me/')}</div>
+                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Basic Info</h3>${renderR('Description', i.desc)}${renderR('Category', i.cat)}${renderR('Type', i.type)}${renderR('Address', i.addr)}${renderR('Ward', i.ward)}</div>
+                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Contact</h3>${renderP('Phone 1', i.ph1)}${renderP('Phone 2', i.ph2)}</div>
+                    <div class="bg-white p-5 rounded-2xl shadow-sm"><h3 class="font-bold text-[#4B0082] border-b pb-2 mb-2 text-xs uppercase tracking-widest">Digital Contact</h3>${renderC('Viber', i.viber, 'fab fa-viber', 'viber-bg', 'viber://chat?number=')}${renderC('Telegram', i.telegram, 'fab fa-telegram', 'telegram-bg', 'https://t.me/')}</div>
                     ${i.note ? `<div class="bg-white p-5 rounded-2xl shadow-sm border-l-4 border-yellow-400"><h3 class="font-bold text-[#4B0082] text-xs uppercase mb-2">Note</h3><p class="text-sm text-gray-600 post-content">${i.note}</p></div>` : ''}</div>`;
             }
             modal.style.display = 'block'; document.body.style.overflow = 'hidden'; document.getElementById('bottomNav').style.transform = 'translateY(150%)';
